# fz

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  arch_x86.py  corpus.py  corpus_analyzer.py  coverage.py  coverage_linux.py  coverage_macos.py  coverage_utils.py  main.py  mutator.py  network_harness.py  pyproject.toml  requirements.txt  target_runner.py  zip
examples/: README.md
examples/netserver/: Makefile  fuzz.sh  server.c
examples/target1/: Makefile  fuzz.sh  target1.c
examples/target2/: Makefile  fuzz.sh  target2.c
examples/target4/: Makefile  fuzz.sh  target4.c
src/fz/: __main__.py  worker.py
src/fz/arch/: arm64.py
src/fz/corpus/: __init__.py  corpus.py  manager.py  mutator.py  utils.py
src/fz/coverage/: __init__.py  cfg.py  collector.py  common.py  gdb_collector.py  linux.py  macos.py  utils.py  visualize.py
src/fz/coverage/plugin/: Makefile  fz_bbcov.c
src/fz/harness/: __init__.py  network.py
src/fz/harness/preload/: Makefile  __init__.py  net_stub.c
src/fz/runner/: target.py
tests/: conftest.py  test_corpus.py  test_mutator.py  test_target.py
tests/coverage/: fixture.c  test_collectors.py  test_utils.py
tests/harness/: test_preload.py
